--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
-    .filter-buttons, .recent, .post, footer {
-      max-width: 700px;
-      margin: 20px auto;
-      padding: 0 20px;
+    h1 {
+      text-align: center;
+      color: #F74DA5;
+      margin-bottom: 20px;
     }
     .filter-buttons {
       display: flex;
       justify-content: center;
       gap: 10px;
+      margin: 20px auto;
+      max-width: 700px;
     }
     .filter-buttons button {
       flex: 1;
@@ -54,12 +56,51 @@
       background: #F74DA5;
       color: white;
     }
+    input, select {
+      width: 100%;
+      padding: 14px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+      box-sizing: border-box;
+    }
+    .file-wrapper {
+      width: 100%;
+      margin: 10px 0;
+    }
+    .file-wrapper label {
+      display: block;
+      margin-bottom: 5px;
+      font-size: 14px;
+      color: #666;
+    }
+    button.submit {
+      width: 100%;
+      padding: 14px;
+      background-color: #F74DA5;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      font-size: 18px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+    .recent {
+      max-width: 700px;
+      margin: 40px auto 20px;
+      font-size: 20px;
+      color: #F74DA5;
+      font-weight: bold;
+      padding: 0 20px;
+    }
     .post {
+      max-width: 700px;
+      margin: 10px auto;
       background: white;
       padding: 20px;
       border-radius: 8px;
       border: 1px solid #eee;
-      margin-bottom: 20px;
     }
     .post img {
       width: 100px;
@@ -110,10 +151,10 @@
   </div>
 
   <div class="container">
-    <h1>편집자를 기다린는 유튜버들이 모여는 곳</h1>
+    <h1>편집자를 기다리는 유튜버들이 모이는 곳</h1>
     <select id="type">
       <option value="편집자">편집자</option>
-      <option value="식림레어">식림레어</option>
+      <option value="썸네일러">썸네일러</option>
     </select>
     <input type="text" id="channel" placeholder="채널명" />
     <input type="text" id="subs" placeholder="구독자 수" />
@@ -128,10 +169,10 @@
   <div class="filter-buttons">
     <button onclick="filterPosts('전체')" class="active">전체</button>
     <button onclick="filterPosts('편집자')">편집자</button>
-    <button onclick="filterPosts('썸네일러')">식림레어</button>
+    <button onclick="filterPosts('썸네일러')">썸네일러</button>
   </div>
 
-  <div class="recent">최근 목집글</div>
+  <div class="recent">최근 모집글</div>
   <div id="postList"></div>
   <div class="pagination" id="pagination"></div>
 
@@ -162,6 +203,13 @@
     const auth = getAuth(app);
     const provider = new GoogleAuthProvider();
 
+    const postList = document.getElementById("postList");
+    const pagination = document.getElementById("pagination");
+    const postsRef = collection(db, "modueditPosts");
+    let allPosts = [];
+    let currentPage = 1;
+    const postsPerPage = 5;
+
     onAuthStateChanged(auth, (user) => {
       if (user) {
         document.getElementById("loginBtn").style.display = "none";
@@ -182,6 +230,107 @@
       signOut(auth)
         .then(() => location.reload())
         .catch(error => console.error("로그아웃 실패", error));
+    };
+
+    async function fetchPosts() {
+      const q = query(postsRef, orderBy("createdAt", "desc"));
+      const snapshot = await getDocs(q);
+      allPosts = snapshot.docs.map(doc => doc.data());
+      renderPosts(allPosts);
+    }
+
+    fetchPosts();
+
+    window.registerPost = async function () {
+      const type = document.getElementById("type").value;
+      const channel = document.getElementById("channel").value;
+      const subs = document.getElementById("subs").value;
+      const link = document.getElementById("link").value;
+      const imgInput = document.getElementById("image");
+
+      if (!channel || !subs || !link || !imgInput.files[0]) {
+        alert("모든 항목과 프로필 사진을 입력해주세요!");
+        return;
+      }
+
+      const reader = new FileReader();
+      reader.onload = async function (e) {
+        const imageURL = e.target.result;
+        const postData = {
+          type,
+          channel,
+          subs,
+          link,
+          imageURL,
+          createdAt: new Date()
+        };
+        await addDoc(postsRef, postData);
+        fetchPosts();
+        clearForm();
+      };
+      reader.readAsDataURL(imgInput.files[0]);
+    };
+
+    function renderPosts(posts) {
+      const start = (currentPage - 1) * postsPerPage;
+      const end = start + postsPerPage;
+      const currentPosts = posts.slice(start, end);
+
+      postList.innerHTML = "";
+      currentPosts.forEach(post => {
+        const el = document.createElement("div");
+        el.className = "post";
+
+        const date = post.createdAt?.seconds
+          ? new Date(post.createdAt.seconds * 1000).toLocaleDateString('ko-KR')
+          : "";
+
+        el.innerHTML = `
+          <img src="${post.imageURL}" alt="채널 사진" />
+          <strong>구분:</strong> ${post.type}<br/>
+          <strong>채널명:</strong> ${post.channel}<br/>
+          <strong>구독자수:</strong> ${post.subs}<br/>
+          <strong>구인 링크:</strong> <a href="${post.link}" target="_blank">${post.link}</a>
+          <div class="date">${date}</div>
+        `;
+        postList.appendChild(el);
+      });
+
+      renderPagination(posts);
+    }
+
+    function renderPagination(posts) {
+      const totalPages = Math.ceil(posts.length / postsPerPage);
+      pagination.innerHTML = "";
+
+      for (let i = 1; i <= totalPages; i++) {
+        const btn = document.createElement("button");
+        btn.textContent = i;
+        if (i === currentPage) btn.classList.add("active");
+        btn.onclick = () => {
+          currentPage = i;
+          renderPosts(posts);
+        };
+        pagination.appendChild(btn);
+      }
+    }
+
+    function clearForm() {
+      document.getElementById("type").value = "편집자";
+      document.getElementById("channel").value = "";
+      document.getElementById("subs").value = "";
+      document.getElementById("link").value = "";
+      document.getElementById("image").value = "";
+    }
+
+    window.filterPosts = function(type) {
+      const buttons = document.querySelectorAll(".filter-buttons button");
+      buttons.forEach(btn => btn.classList.remove("active"));
+      event.target.classList.add("active");
+
+      const filtered = type === '전체' ? allPosts : allPosts.filter(post => post.type === type);
+      currentPage = 1;
+      renderPosts(filtered);
     };
   </script>
 </body>
