--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
-<html lang="ko">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>모두의 편집</title>
+
+  <!-- ✅ 파비콘 추가 -->
+  <link rel="icon" type="image/png" href="/favicon_32x32.png" />
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -122,194 +124,3 @@
     }
   </style>
 </head>
-<body>
-  <header>
-    <div class="logo">모두의 편집</div>
-  </header>
-
-  <div class="container">
-    <h1>편집자를 기다리는 유튜버들이 모이는 곳</h1>
-    <select id="type">
-      <option value="편집자">편집자</option>
-      <option value="썸네일러">썸네일러</option>
-    </select>
-    <input type="text" id="channel" placeholder="채널명" />
-    <input type="text" id="subs" placeholder="구독자 수" />
-    <input type="text" id="link" placeholder="구인 링크" />
-    <div class="file-wrapper">
-      <label for="image">채널 프로필 사진 업로드</label>
-      <input type="file" id="image" accept="image/*" />
-    </div>
-    <button class="submit" onclick="registerPost()">등록하기</button>
-  </div>
-
-  <div class="filter-buttons">
-    <button onclick="filterPosts('전체')" class="active">전체</button>
-    <button onclick="filterPosts('편집자')">편집자</button>
-    <button onclick="filterPosts('썸네일러')">썸네일러</button>
-  </div>
-
-  <!-- ✅ 검색창 추가 -->
-  <div style="text-align:center; margin: 10px 0;">
-  <input
-    type="text"
-    id="searchInput"
-    placeholder="검색어 입력"
-    style="padding: 6px 10px; width: 50%; font-size: 14px; border: 1px solid #ccc; border-radius: 6px;"
-  />
-</div>
-
-
-  <div class="recent">최근 모집글</div>
-  <div id="postList"></div>
-
-  <footer>
-    © 2025 모두의 편집 | moduedit<br/>
-    문의: <a href="mailto:min59aa@daum.net">min59aa@daum.net</a>
-  </footer>
-
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js';
-    import {
-      getFirestore, collection, addDoc, getDocs, query, orderBy, doc, getDoc, setDoc, updateDoc, increment
-    } from 'https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js';
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyCHuFgJxtDejO8FHhQlB9upzXFy2agr6P4",
-      authDomain: "dsaddd-ccfcd.firebaseapp.com",
-      projectId: "dsaddd-ccfcd",
-      storageBucket: "dsaddd-ccfcd.appspot.com",
-      messagingSenderId: "763785935968",
-      appId: "1:763785935968:web:68382d6d01cd3d11631705",
-      measurementId: "G-RC1H269Z9M"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    const postList = document.getElementById("postList");
-    const postsRef = collection(db, "modueditPosts");
-
-    let allPosts = [];
-
-    async function fetchPosts() {
-      const q = query(postsRef, orderBy("createdAt", "desc"));
-      const snapshot = await getDocs(q);
-      allPosts = snapshot.docs.map(doc => doc.data());
-      renderPosts(allPosts);
-    }
-
-    fetchPosts();
-
-    window.registerPost = async function () {
-      const type = document.getElementById("type").value;
-      const channel = document.getElementById("channel").value;
-      const subs = document.getElementById("subs").value;
-      const link = document.getElementById("link").value;
-      const imgInput = document.getElementById("image");
-
-      if (!channel || !subs || !link || !imgInput.files[0]) {
-        alert("모든 항목과 프로필 사진을 입력해주세요!");
-        return;
-      }
-
-      const reader = new FileReader();
-      reader.onload = async function (e) {
-        const imageURL = e.target.result;
-        const postData = {
-          type,
-          channel,
-          subs,
-          link,
-          imageURL,
-          createdAt: new Date()
-        };
-        await addDoc(postsRef, postData);
-        fetchPosts();
-        clearForm();
-      };
-      reader.readAsDataURL(imgInput.files[0]);
-    };
-
-    function renderPosts(posts) {
-      postList.innerHTML = "";
-      posts.forEach(post => {
-        const el = document.createElement("div");
-        el.className = "post";
-
-        const date = post.createdAt?.seconds
-          ? new Date(post.createdAt.seconds * 1000).toLocaleDateString('ko-KR', {
-              year: 'numeric',
-              month: 'long',
-              day: 'numeric'
-            })
-          : "";
-
-        el.innerHTML = `
-          <img src="${post.imageURL}" alt="채널 사진" />
-          <strong>구분:</strong> ${post.type}<br/>
-          <strong>채널명:</strong> ${post.channel}<br/>
-          <strong>구독자수:</strong> ${post.subs}<br/>
-          <strong>구인 링크:</strong> <a href="${post.link}" target="_blank">${post.link}</a>
-          <div class="date">${date}</div>
-        `;
-        postList.appendChild(el);
-      });
-    }
-
-    function clearForm() {
-      document.getElementById("type").value = "편집자";
-      document.getElementById("channel").value = "";
-      document.getElementById("subs").value = "";
-      document.getElementById("link").value = "";
-      document.getElementById("image").value = "";
-    }
-
-    window.filterPosts = function(type) {
-      const buttons = document.querySelectorAll(".filter-buttons button");
-      buttons.forEach(btn => btn.classList.remove("active"));
-      event.target.classList.add("active");
-
-      if (type === '전체') {
-        renderPosts(allPosts);
-      } else {
-        const filtered = allPosts.filter(post => post.type === type);
-        renderPosts(filtered);
-      }
-    };
-
-    // ✅ 검색 필터링
-    document.getElementById("searchInput").addEventListener("input", function () {
-      const keyword = this.value.trim().toLowerCase();
-
-      const filtered = allPosts.filter(post =>
-        post.channel.toLowerCase().includes(keyword) ||
-        post.subs.toLowerCase().includes(keyword) ||
-        post.type.toLowerCase().includes(keyword)
-      );
-
-      renderPosts(filtered);
-    });
-
-    // ✅ 방문자 수 증가
-    async function trackVisit() {
-      const counterRef = doc(db, "stats", "visits");
-
-      try {
-        const snap = await getDoc(counterRef);
-        if (!snap.exists()) {
-          await setDoc(counterRef, { count: 1 });
-        } else {
-          await updateDoc(counterRef, {
-            count: increment(1)
-          });
-        }
-      } catch (err) {
-        console.error("방문자 수 저장 실패", err);
-      }
-    }
-
-    trackVisit();
-  </script>
-</body>
-</html>
