--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>모두의 편집</title>
+
+<meta name="description" content="유튜버와 편집자를 연결하는 플랫폼, 모두의 편집" />
+<meta name="keywords" content="유튜버 구인, 유튜브 편집자, 썸네일러 모집, 모두의 편집" />
+<meta property="og:title" content="모두의 편집" />
+<meta property="og:description" content="편집자를 기다리는 유튜버들이 모이는 곳" />
+<meta property="og:url" content="https://moduedit.com" />
+
   <link rel="icon" type="image/png" href="/favicon_32x32.png" />
   <style>
     body {
